fixed about resize wrap

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -201,8 +201,8 @@
 
 .about-section {
   min-height: calc(100vh - 74px);
-  background: rgb(22, 22, 22);
-  padding: 10vh ;
+  background: #161616;
+  padding: 10vh;
 }
 
 .about-section h2 {
@@ -214,7 +214,7 @@
 }
 
 .about-section .about-info {
-  width: 75%;
+  width: 90vw;
   max-width: 1140px;
 }
 
@@ -249,9 +249,6 @@
   }
   .about-section h2 {
     text-align: center;
-  }
-  .about-section .about-info {
-    width: 90%;
   }
   .about-section .row {
     flex-wrap: wrap;
